Ok, I'm commiting a script that I lost and had to rewrite.

--- a/pyramids/sph.ini
+++ b/pyramids/sph.ini
@@ -6,7 +6,7 @@ feature_extractor = SIFT32
 feat_dim = 32
 ;preprocessing_id
 ;pp_id = dsift32
-pp_id = dsift32_renormed
+pp_id = dsift32_testing
 oaitk_dir = /home/scott/Code/OAI/oaitk
 extractor = /home/scott/Code/OAI/oaitk/scripts/extract.sh
 ;where I can store intermediate data
